fix-up : all issues of sonarLint